intTests/test_parse_errors/parser002.log.good
Loading file "parser002.saw"
parser002.saw:2:36-2:38: Error: Syntax error: missing ';'
FAILED
